alignment fix in card page

--- a/css/common.css
+++ b/css/common.css
@@ -221,6 +221,9 @@ header{
     padding: 2rem;
     border-radius: 1.8rem;
     height: 21rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .overview-2 .content{
     text-align: left;
@@ -251,7 +254,7 @@ header{
     border-radius: 1.8rem;
     font-size: 1.2rem;
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
     line-height: 1.8rem;
     text-align: left;
